# template-f407-rs

./: Cargo.toml  openocd.cfg
